# lex-asof

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: answers.py  db.py  ingest.py  main.py  models.py  observability.py  retrieval.py
eval/: golden.py
scripts/: fetch_eurlex.py  seed.py
tests/: conftest.py  test_answers.py  test_api.py  test_ingest.py  test_retrieval.py
