[project]
name = "lex-asof"
version = "0.1.0"
description = "Point-in-time legal retrieval: cite the law as it stood on the date that matters."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "httpx>=0.27",
    "sentry-sdk[fastapi]>=2.17",
    "ddtrace>=2.17",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Explicit, because a flat layout with app/ + eval/ + scripts/ is ambiguous to auto-discovery.
[tool.setuptools]
packages = ["app", "eval", "scripts"]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-cov>=6.0", "mypy>=1.13", "ruff>=0.8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
omit = ["app/observability.py"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ANN"]

[tool.ruff.lint.per-file-ignores]
# FastAPI dependency injection *requires* calls in argument defaults. This is the framework's
# documented idiom, not the mutable-default bug B008 exists to catch.
"app/main.py" = ["B008"]
